# mural

./: .SRCINFO  2026-06-24-220609-claude-auth-logout.txt  2026-06-24-223231-claude-auth-logout.txt  2026-06-24-230944-claude-auth-logout.txt  2026-06-24-232918-claude-auth-logout.txt  2026-06-26-143040-this-session-is-being-continued-from-a-previous-c.txt  CHANGELOG.md  DEVGUIDE.txt  MURAL - DEVGUIDE.txt  Makefile  PKGBUILD  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
flatpak/: README.md  io.github.ian_vinson.Mural.metainfo.xml  io.github.ian_vinson.Mural.yml  mural.desktop
mural/: __init__.py  cli.py  config.py  detection.py  main.py
mural/adapters/: __init__.py  base.py  gnome.py  plasma.py  wlr.py  x11.py
mural/backend/: __init__.py  discovery.py  formats.py  runner.py
mural/core/: __init__.py  autostart.py  monitor_manager.py  playlist.py  playlist_manager.py  playlist_store.py  profiles.py  service.py  wallpaper_manager.py
mural/gui/: __init__.py  fade_overlay.py  library_tab.py  mainwindow.py  platform_tab.py  playlist_tab.py  settings_tab.py  wallpaper_card.py
mural/hotkeys/: install-hotkeys.sh  mural-hotkeys.desktop
mural/platform/: __init__.py  cache.py  client.py  models.py
mural/utils/: gpu_monitor.py  hyprland.py  matugen.py  mpris.py  openrgb.py  palette.py  (+2 more)
plasma-plugin/: metadata.json
platform/: LICENSE  auth.py  db.py  main.py  models.py  storage.py
scripts/: build-appimage.sh
systemd/: mural-core.service
tests/: test_backend.py  test_detection.py  test_platform_client.py  test_properties.py
(+7 files in other folders)
