[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mural"
version = "0.2.0-alpha"
description = "Animated wallpaper platform for Linux"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "dasbus>=1.7",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
]

[project.scripts]
mural = "mural.main:main"
mural-core = "mural.core.service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mural*"]
